feat: display version

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         <div class="brand">
           <span class="brand-title">Swatches to ASE</span>
           <span class="brand-subtitle">Studio</span>
+          <span class="brand-version" id="app-version"></span>
         </div>
         <div class="tagline">Turn Procreate palettes into ASE files.</div>
       </header>
