--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,12 @@
   <body>
     <div class="page">
       <header class="topbar">
-        <div class="brand">
-          <span class="brand-title">Swatches to ASE</span>
-          <span class="brand-subtitle">Studio</span>
-          <span class="brand-version" id="app-version"></span>
+        <div class="topbar-row">
+          <div class="brand">
+            <span class="brand-title">Swatches to ASE</span>
+            <span class="brand-subtitle">Studio</span>
+            <span class="brand-version" id="app-version"></span>
+          </div>
         </div>
         <div class="tagline">Turn Procreate palettes into ASE files.</div>
       </header>
@@ -56,6 +58,22 @@
           </div>
         </section>
       </main>
+
+      <footer class="footer">
+        <a
+          class="github-button"
+          href="https://github.com/joanroig/swatches-to-ase"
+          target="_blank"
+          rel="noreferrer"
+        >
+          <svg aria-hidden="true" viewBox="0 0 24 24" focusable="false">
+            <path
+              d="M12 2C6.48 2 2 6.58 2 12.24c0 4.52 2.87 8.35 6.84 9.7.5.1.68-.22.68-.49 0-.24-.01-1.04-.01-1.88-2.51.55-3.04-1.1-3.04-1.1-.41-1.08-1.01-1.37-1.01-1.37-.83-.58.06-.57.06-.57.92.07 1.41.98 1.41.98.82 1.44 2.15 1.02 2.68.78.08-.61.32-1.02.58-1.25-2-.23-4.1-1.03-4.1-4.58 0-1.01.35-1.84.92-2.49-.09-.23-.4-1.17.09-2.44 0 0 .75-.25 2.46.95.71-.2 1.47-.3 2.23-.3.76 0 1.52.1 2.23.3 1.71-1.2 2.46-.95 2.46-.95.49 1.27.18 2.21.09 2.44.57.65.92 1.48.92 2.49 0 3.56-2.1 4.35-4.11 4.58.33.29.62.86.62 1.73 0 1.25-.01 2.26-.01 2.57 0 .27.18.6.69.49A10.21 10.21 0 0 0 22 12.24C22 6.58 17.52 2 12 2Z"
+            />
+          </svg>
+          <span>GitHub</span>
+        </a>
+      </footer>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
